timers funcionando y cambio de Obj Alcanzado a Counter

--- a/css/style.css
+++ b/css/style.css
@@ -267,9 +267,21 @@ a:focus, a:hover, .btn:focus, .btn:hover, button:focus, button:hover {
   font-weight: bold;
   margin-bottom: 0;
 }
+
+.sectionTitle h4 {
+  margin-top: 18px;
+  line-height: 36px;
+  font-family: "Montserrat", sans-serif;
+  margin-bottom: 0;
+}
 @media (max-width: 767px) {
   .sectionTitle h3 {
     font-size: 20px;
+    line-height: 26px;
+  }
+    
+  .sectionTitle h4 {
+    font-size: 18px;
     line-height: 26px;
   }
 }
