--- a/css/theme.css
+++ b/css/theme.css
@@ -101,6 +101,10 @@ body p {
   color: #435061;
 }
 
+.sectionTitle h4 {
+  color: #435061;
+}
+
 /*--------------------------------------------------------------------------------------------*/
 .navbar {
   background: #fff;
